Frontend connected to backend and CORS fixed